--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,19 +1,11 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
-
-  # Path to source
-  alias __FINALPATH__/ ;
+location __PATH__ {
 
   # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
-                proxy_bind              $server_adress;
-                proxy_pass              http://127.0.0.1:8083;
-                proxy_set_header        Host            $http_host;
-                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header        X-Scheme        $scheme;
-                proxy_set_header        X-Script-Name   /__FINALPATH__;
+       proxy_pass http://localhost:__PORT__;
+        proxy_set_header X-Forwarded-For $remote_addr;
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
 }
