--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,7 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/
-ExecStart=/usr/bin/python __FINALPATH__/script >> /var/log/__APP__/__APP__.log 2>&1
+ExecStart=/usr/bin/python __FINALPATH__/cps.py >> /var/log/__APP__/__APP__.log 2>&1
 
 [Install]
 WantedBy=multi-user.target
