--- a/manifest.json
+++ b/manifest.json
@@ -62,25 +62,7 @@
                 },
                 "example": "johndoe"
             },
-            {
-                "name": "language",
-		"type":"language",
-                "ask": {
-                    "en": "Select a default language (you may change it later in the app",
-                    "fr": "Choisissez une langue par défaut (vous pourrez la changer ultérieurement dans l'application"
-                },
-		"choices": [ "fr", "en", "es", "de"],
-                "default": "fr"
-            },
-            {
-                "name": "is_public",
-                "type": "boolean",
-                "ask": {
-                    "en": "Is it a public application?",
-                    "fr": "Est-ce une application publique ?"
-                },
-                "default": false
-            },
+
             {
                 "name": "password",
                 "type": "password",
@@ -94,6 +76,34 @@
                 },
                 "example": "Choose a password"
             }
+            {
+                "name": "language",
+		"type":"language",
+                "ask": {
+                    "en": "Select a default language (you may change it later in the app)",
+                    "fr": "Choisissez une langue par défaut (vous pourrez la changer ultérieurement dans l'application)"
+                },
+		"choices": [ "fr", "en", "es", "de"],
+                "default": "fr"
+            },
+            {
+                "name": "upload",
+		"type":"boolean",
+                "ask": {
+                    "en": "Do you want to allow uploading of books (you may change it later in the app)?",
+                    "fr": "Voulez vous autoriser l'upload de livres (vous pourrez la changer ultérieurement dans l'application)?"
+                },
+                "default": false
+            },
+            {
+                "name": "is_public",
+                "type": "boolean",
+                "ask": {
+                    "en": "Is it a public application?",
+                    "fr": "Est-ce une application publique ?"
+                },
+                "default": false
+            },
         ]
     }
 }
