--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     },
     "multi_instance": false,
     "services": [
-        "nginx"
+        "nginx",
+	"calibreweb"
     ],
     "arguments": {
         "install" : [
@@ -61,6 +62,19 @@
                     "fr": "Choisissez l’administrateur"
                 },
                 "example": "johndoe"
+            },
+            {
+                "name": "password",
+                "type": "password",
+                "ask": {
+                    "en": "Set the administrator password",
+                    "fr": "Définissez le mot de passe administrateur"
+                },
+                "help": {
+                    "en": "Use the help field to add an information for the admin about this question.",
+                    "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
+                },
+                "example": "Choose a password"
             },
             {
                 "name": "language",
