--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,27 @@
 {
-    "name": "Calibre-web",
-    "id": "calibreweb",
+    "name": "YunoHost example app",
+    "id": "ynhexample",
     "packaging_format": 1,
     "description": {
-        "en": "Calibre-web for Yunohost",
-        "fr": "Calibre-web pour Yunohost."
+        "en": "Example package for YunoHost application.",
+        "fr": "Exemple de package d’application pour YunoHost."
     },
     "version": "1.0~ynh1",
-    "url": "https://github.com/janeczku/calibre-web",
+    "url": "https://example.com",
     "license": "free",
     "maintainer": {
-        "name": "Krakinou",
-        "email": "misterl56@hotmail.com"
+        "name": "John doe",
+        "email": "john.doe@example.com",
+        "url": "http://example.com"
     },
     "requirements": {
         "yunohost": ">= 2.7.14"
     },
-    "multi_instance": false,
+    "multi_instance": true,
     "services": [
         "nginx",
-	"calibreweb"
+        "php5-fpm",
+        "mysql"
     ],
     "arguments": {
         "install" : [
@@ -27,8 +29,8 @@
                 "name": "domain",
                 "type": "domain",
                 "ask": {
-                    "en": "Choose a domain name for Calibre-web",
-                    "fr": "Choisissez un nom de domaine pour Calibre-web"
+                    "en": "Choose a domain name for ynhexample",
+                    "fr": "Choisissez un nom de domaine pour ynhexample"
                 },
                 "example": "example.com"
             },
@@ -36,23 +38,11 @@
                 "name": "path",
                 "type": "path",
                 "ask": {
-                    "en": "Choose a path for Calibre-web",
-                    "fr": "Choisissez un chemin pour Calibre-web"
+                    "en": "Choose a path for ynhexample",
+                    "fr": "Choisissez un chemin pour ynhexample"
                 },
-                "example": "/calibre",
-                "default": "/calibre"
-            },
-		    {
-                "name": "calibre_path",
-                "ask": {
-                    "en": "Select the folder containing the library",
-                    "fr": "Choisissez le répertoire contenant la bibliothèque"
-                },
-                "help": {
-                    "en": "This folder should have read write access. It will be created if it does not exist.",
-                    "fr": "Le répertoire doit être accesible en lecture écriture, il sera créé s'il n'existe pas."
-                },
-                "example": "/home/johndoe/calibre"
+                "example": "/example",
+                "default": "/example"
             },
             {
                 "name": "admin",
@@ -64,13 +54,21 @@
                 "example": "johndoe"
             },
             {
-                "name": "language",
-				"type":"language",
+                "name": "is_public",
+                "type": "boolean",
                 "ask": {
-                    "en": "Select a default language (you may change it later in the app)",
-                    "fr": "Choisissez une langue par défaut (vous pourrez la changer ultérieurement dans l'application)"
+                    "en": "Is it a public application?",
+                    "fr": "Est-ce une application publique ?"
                 },
-				"choices": [ "fr", "en", "es", "de"],
+                "default": true
+            },
+            {
+                "name": "language",
+                "ask": {
+                    "en": "Choose the application language",
+                    "fr": "Choisissez la langue de l'application"
+                },
+                "choices": ["fr", "en"],
                 "default": "fr"
             },
             {
@@ -85,25 +83,7 @@
                     "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
                 },
                 "example": "Choose a password"
-            },
-            {
-                "name": "upload",
-				"type":"boolean",
-                "ask": {
-                    "en": "Do you want to allow uploading of books (you may change it later in the app)?",
-                    "fr": "Voulez vous autoriser l'upload de livres (vous pourrez la changer ultérieurement dans l'application)?"
-                },
-                "default": false
-            },
-            {
-                "name": "is_public",
-                "type": "boolean",
-                "ask": {
-                    "en": "Is it a public application?",
-                    "fr": "Est-ce une application publique ?"
-                },
-                "default": false
-            },
+            }
         ]
     }
 }
