Test old manifest : calibre_dir

--- a/manifest.json
+++ b/manifest.json
@@ -42,6 +42,18 @@
                 "example": "/calibre",
                 "default": "/calibre"
             },
+		    {
+                "name": "calibre_path",
+                "ask": {
+                    "en": "Select the folder containing the library",
+                    "fr": "Choisissez le répertoire contenant la bibliothèque"
+                },
+                "help": {
+                    "en": "This folder should have read write access. It will be created if it does not exist.",
+                    "fr": "Le répertoire doit être accesible en lecture écriture, il sera créé s'il n'existe pas."
+                },
+                "example": "/home/johndoe/calibre"
+            },
             {
                 "name": "admin",
                 "type": "user",
