--- a/manifest.json
+++ b/manifest.json
@@ -45,8 +45,8 @@
 		    {
                 "name": "calibre_path",
                 "ask": {
-                    "en": "Select the folder containing the library",
-                    "fr": "Choisissez le répertoire contenant la bibliothèque"
+                    "en": "Select the folder containing the Calibre library",
+                    "fr": "Choisissez le répertoire contenant la bibliothèque Calibre"
                 },
                 "help": {
                     "en": "This folder should have read write access. It will be created if it does not exist.",
@@ -75,11 +75,20 @@
             {
                 "name": "language",
                 "ask": {
-                    "en": "Choose the application language",
-                    "fr": "Choisissez la langue de l'application"
+                    "en": "Select a default language (you may change it later in the app)",
+                    "fr": "Choisissez une langue par défaut (vous pourrez la changer ultérieurement dans l'application)"
                 },
                 "choices": ["fr", "en"],
                 "default": "fr"
+            },
+            {
+                "name": "upload",
+				"type":"boolean",
+                "ask": {
+                    "en": "Do you want to allow uploading of books (you may change it later in the app)?",
+                    "fr": "Voulez vous autoriser l'upload de livres (vous pourrez la changer ultérieurement dans l'application)?"
+                },
+                "default": false
             },
             {
                 "name": "password",
@@ -92,7 +101,7 @@
                     "en": "Use the help field to add an information for the admin about this question.",
                     "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
                 },
-                "example": "Choose a password"
+                "example": "Averystrongpassword"
             }
         ]
     }
