--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,7 @@
                 },
                 "help": {
                     "en": "This folder should have read write access. It will be created if it does not exist.",
-                    "fr": "Le répertoire doit être accesible en lecture écriture, il sera créé s'il n'existe pas."
+                    "fr": "Le répertoire doit être accessible en lecture écriture, il sera créé s'il n'existe pas."
                 },
                 "default": "/home/yunohost.app/calibreweb"
             },
@@ -96,10 +96,6 @@
                 "ask": {
                     "en": "Set the administrator password",
                     "fr": "Définissez le mot de passe administrateur"
-                },
-                "help": {
-                    "en": "Use the help field to add an information for the admin about this question.",
-                    "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
                 },
                 "example": "Averystrongpassword"
             }
