--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "requirements": {
         "yunohost": ">= 2.7.14"
     },
-    "multi_instance": false,
+    "multi_instance": true,
     "services": [
         "nginx"
     ],
