Typo in language

--- a/manifest.json
+++ b/manifest.json
@@ -65,7 +65,7 @@
             },
             {
                 "name": "language",
-                "type": "string"
+                "type": "string",
                 "optional": true,
                 "ask": {
                     "en": "Select a default language",
