--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "calibreweb",
     "packaging_format": 1,
     "description": {
-        "en": "Calibre-web for Yunohost",
-        "fr": "Calibre-web pour Yunohost"
+        "en": "Browse, read and download eBooks",
+        "fr": "Naviguer, lisez et téléchargez des eBooks"
     },
     "version": "0.96.0~ynh3",
     "url": "https://github.com/janeczku/calibre-web",
