--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "calibreweb",
     "packaging_format": 1,
     "description": {
-        "en": "Calibre-web for Yunohost",
-        "fr": "Calibre-web pour Yunohost"
+        "en": "Browsing, reading and downloading eBooks using an existing Calibre database",
+        "fr": "Explorer, lire et télécharger des eBooks à partir d'une base de données Calibre existante"
     },
     "version": "0.96.0~ynh3",
     "url": "https://github.com/janeczku/calibre-web",
