--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "en": "Browsing, reading and downloading eBooks using a Calibre database",
         "fr": "Explorer, lire et télécharger des eBooks à partir d'une base de données Calibre"
     },
-    "version": "0.96.6~ynh4",
+    "version": "0.96.7beta~ynh4",
     "url": "https://github.com/janeczku/calibre-web",
     "license": "free",
     "maintainer": {
