--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "license": "free",
     "maintainer": {
         "name": "Krakinou",
-        "email": "misterl56@hotmail.com"
+        "email": "nicolas@aubonalbanais.ovh"
     },
     "requirements": {
         "yunohost": ">= 3.7.1"
@@ -66,6 +66,7 @@
             {
                 "name": "language",
                 "optional": true,
+                "type": "string",
                 "ask": {
                     "en": "Select a default language",
                     "fr": "Choisissez une langue par défaut"
