--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "license": "free",
     "maintainer": {
         "name": "Krakinou",
-        "email": "nicolas@aubonalbanais.ovh"
+        "email": "misterl56@hotmail.com"
     },
     "requirements": {
         "yunohost": ">= 3.7.1"
