--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 location __PATH__ {
-  client_max_body_size 20M;
+  client_max_body_size 200M;
   # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
@@ -10,7 +10,7 @@ location __PATH__ {
         proxy_set_header		X-Forwarded-For				$proxy_add_x_forwarded_for;
         proxy_set_header		X-Scheme					$scheme;
         proxy_set_header		X-Script-Name				__PATH__;
-        proxy_set_header		X-Remote-User				$remote_user;
+#        proxy_set_header		X-Remote-User				$remote_user;
         
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
