--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,17 +1,20 @@
-location __PATH__ {
-  client_max_body_size 200M;
+#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+location __PATH__/ {
   # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
-        proxy_pass				http://localhost:__PORT__;
-        proxy_set_header		X-Forwarded-For				$remote_addr;
-        proxy_set_header		Host						$http_host;
-        proxy_set_header		X-Forwarded-For				$proxy_add_x_forwarded_for;
-        proxy_set_header		X-Scheme					$scheme;
-        proxy_set_header		X-Script-Name				__PATH__;
-#        proxy_set_header		X-Remote-User				$remote_user;
-        
+
+  client_max_body_size 200M;
+
+  proxy_pass				http://localhost:__PORT__;
+  proxy_set_header		X-Forwarded-For				$remote_addr;
+  proxy_set_header		Host						$http_host;
+  proxy_set_header		X-Forwarded-For				$proxy_add_x_forwarded_for;
+  proxy_set_header		X-Scheme					$scheme;
+  proxy_set_header		X-Script-Name				__PATH__;
+#  proxy_set_header		X-Remote-User				$remote_user;
+
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
 }
