--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,6 +4,11 @@ location __PATH__ {
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
+        #Proxy buffering is required for Kobo sync on large library
+        proxy_busy_buffers_size   512k;
+        proxy_buffers   4 512k;
+        proxy_buffer_size   256k;
+
         proxy_pass				http://localhost:__PORT__;
         proxy_set_header		X-Forwarded-For				$remote_addr;
         proxy_set_header		Host						$http_host;
