--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,6 +3,10 @@ location __PATH__ {
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
+        #Client max body size to allow upload of ebook.
+        #big number as audiobook may be quite big
+        client_max_body_size 500M;
+
         #Proxy buffering is required for Kobo sync on large library
         proxy_busy_buffers_size   512k;
         proxy_buffers   4 512k;
