--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,10 @@
         "en": "Browsing, reading and downloading eBooks using a Calibre database",
         "fr": "Explorer, lire et télécharger des eBooks à partir d'une base de données Calibre"
     },
-    "version": "0.96.12~ynh2",
+    "version": "0.96.13~ynh1",
     "url": "https://github.com/janeczku/calibre-web",
     "upstream": {
+        "version": "0.6.13",
         "license": "GPL-3.0-only",
         "admindoc": "https://github.com/janeczku/calibre-web/wiki",
         "code": "https://github.com/janeczku/calibre-web"
