--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,11 +11,11 @@ location __PATH__ {
 
         proxy_pass				http://localhost:__PORT__;
         proxy_set_header	X-Forwarded-For	$remote_addr;
-        proxy_set_header	Host						$http_host;
+        proxy_set_header	Host						$host;
         proxy_set_header	X-Forwarded-For	$proxy_add_x_forwarded_for;
         proxy_set_header	X-Scheme				$scheme;
         proxy_set_header	X-Script-Name		__PATH__;
-#       proxy_set_header	X-Remote-User		$remote_user;
+        proxy_set_header	X-Remote-User		$remote_user;
         
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
